Rendered series list if watched

--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -47,7 +47,7 @@ img {
 .series-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 1rem;
 }
 .serie {
   width: 24%;
